# video-storage

./: Dockerfile  application-local.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py  storage.py
